jq: dev-commit nom, regex, identity, literal, key-lookup.
* implement identity filter
* implement literal filter
* implement key lookup filter `.key` `."key"` `.["key"]`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["prataprc <prataprc@gmail.com>"]
 
 [dependencies]
+regex = "1"
+
+[dependencies.nom]
+version = "4.0.0"
+features = ["regexp", "regexp_macros"]
